--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
     <title>vue-project</title>
+
+    <!-- 引入 WeUI -->
+    <link rel="stylesheet" href="node_modules/weui/dist/style/weui.min.css"/>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- 使用 -->
+    <!-- <div class="page__bd page__bd_spacing">
+       <a href="javascript:;" class="weui-btn weui-btn_primary">绿色按钮</a>
+    </div> -->
   </body>
 </html>
