班级动态组件进行中...

--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
     <!-- <div class="page__bd page__bd_spacing">
        <a href="javascript:;" class="weui-btn weui-btn_primary">绿色按钮</a>
     </div> -->
+    <script>
+      /*window.onload = function(){
+        if (document.documentElement.scrollHeight <= document.documentElement.clientHeight) {
+          bodyTag = document.getElementsByTagName('body')[0];
+          bodyTag.style.height = document.documentElement.clientWidth / screen.width * screen.height + 'px';
+        }
+        setTimeout(function () {
+          window.scrollTo(0, 1)
+        }, 0);
+      };*/
+    </script>
   </body>
 </html>
