尝试折腾了一下jquery和jquery-weui，失败了，还原回vue-swipe插件，基本实现功能，还需调整

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- 引入 WeUI -->
     <link rel="stylesheet" href="node_modules/weui/dist/style/weui.min.css"/>
+    <link rel="stylesheet" href="static/vendor/jquery-weui/dist/css/jquery-weui.css"/>
   </head>
   <body>
     <div id="app"></div>
@@ -17,6 +18,11 @@
     <!-- <div class="page__bd page__bd_spacing">
        <a href="javascript:;" class="weui-btn weui-btn_primary">绿色按钮</a>
     </div> -->
+    
+    <!-- <script src="static/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="static/vendor/jquery-weui/dist/js/jquery-weui.js"></script>
+    <script src="static/vendor/jquery-weui/dist/js/swiper.js"></script> -->
+    
     <script>
       /*window.onload = function(){
         if (document.documentElement.scrollHeight <= document.documentElement.clientHeight) {
