--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
         var istouch = false;
         var start = [];
         el.addEventListener("touchstart", function(e) {
+          // e.preventDefault();
+          // window.event.cacenlBubble = false
           if (e.touches.length >= 2) { //判断是否有两个点在屏幕上
             istouch = true;
             start = e.touches; //得到第一组两个点
             obj.gesturestart && obj.gesturestart.call(el); //执行gesturestart方法
-          };
+            // alert('双指');
+          }
+          else {
+            // alert('单指');
+          }
         }, false);
         document.addEventListener("touchmove", function(e) {
           e.preventDefault();
+          // window.event.cacenlBubble = false
           if (e.touches.length >= 2 && istouch) {
             var now = e.touches; //得到第二组两个点
             var scale = getDistance(now[0], now[1]) / getDistance(start[0], start[1]); //得到缩放比例，getDistance是勾股定理的一个方法
@@ -86,6 +93,8 @@
           };
         }, false);
         document.addEventListener("touchend", function(e) {
+          // e.preventDefault();
+          // window.event.cacenlBubble = false
           if (istouch) {
             istouch = false;
             obj.gestureend && obj.gestureend.call(el); //执行gestureend方法
