调整代码结构，pb作为唯一组件，放在router-view外部，以实现全屏，初步实现，待优化

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    
+    
 
     <!-- 使用 -->
     <!-- <div class="page__bd page__bd_spacing">
@@ -63,7 +65,7 @@
 //       
 
       // 代码段A == START ==
-      function setGesture(el) {
+      /* function setGesture(el) {
         var obj = {}; //定义一个对象
         var istouch = false;
         var start = [];
@@ -113,7 +115,7 @@
         var x = p1.pageX - p2.pageX,
           y = p1.pageY - p2.pageY;
         return Math.atan2(y, x) * 180 / Math.PI;
-      };
+      }; */
       // 代码段A === END ===
     </script>
   </body>
