优化重构代码，重新理清逻辑

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div> -->
       <div class="commentbar">
         <form>
-          <input type="text" class="commentbar-input" id="commentInput" onkeypress="if(event.keyCode == 13) alert('oh no');">
+          <input type="text" class="commentbar-input" id="commentInput" onkeypress="if(event.keyCode == 13) return false;">
           <a href="javascript:;" class="comment-button disabled" id="commentSubmit">提交</a>
         </form>
       </div>
