--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         
         // 输入框失去焦点滑动，解决点击"完成",键盘收起,但是tab有空白的问题
         $input.on('blur', function() {
-          window.scrollTo(0, 500);
+          setTimeout(function() {
+            window.scrollTo(0, 500);
+          }, 0);
         })
       });
 
