--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
-    <title>vue-project</title>
+    <title>班级工具</title>
 
     <!-- WeUI -->
     <link rel="stylesheet" href="node_modules/weui/style/weui.min.css"/>
