以vue形式引入weui.js，去掉重复引用的css，解决换页时weui的组件不关闭的bug

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>班级工具</title>
 
     <!-- WeUI -->
-    <link rel="stylesheet" href="node_modules/weui/style/weui.min.css"/>
+    <!-- <link rel="stylesheet" href="node_modules/weui/style/weui.min.css"/> -->
     <link rel="stylesheet" href="static/vendor/jquery-weui/css/jquery-weui.css"/>
     
   </head>
