替换登录为验证码登录，隐藏聊天入口，封装成功和危险的提示方法

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           })
           
           // 提交
-          window.vue.$axios.post('/demo/moments/publishMoment', postData).then(res => {
+          window.vue.$axios.post('/moments/publishMoment', postData).then(res => {
             console.log('publishComment>>>', res.data)
             
             // 成功后提示
