修复链接开头加banji遗漏的a标签

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="commentbar">
         <form>
           <input type="text" class="commentbar-input" id="commentInput" onkeypress="if(event.keyCode == 13) return false;">
-          <a href="javascript:;" class="comment-button disabled" id="commentSubmit">提交</a>
+          <a href="javascript: void(0);" class="comment-button disabled" id="commentSubmit">提交</a>
         </form>
       </div>
     </div>
